Try addModules and add-exports